--- a/styles/main.css
+++ b/styles/main.css
@@ -9,9 +9,32 @@ body {
 }
 
 .left-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 15%;
-  background-color: lightseagreen;
+  border-right: 2px solid white;
   height: 100%;
+}
+.temperature{
+  background-color: white;
+  height: 200px;
+  width: 50px;
+}
+.tempfill {
+  position: relative;
+  left: 5%;
+  top: 1%;
+  width: 90%; /* Set the width to 50% */
+  height: 50%; /* Set the height as needed */
+  background-color: black; /* Set your desired color */
+}
+#tempnum{
+  font-size: 48px;
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 16px;
 }
 
 .middle-container {
@@ -24,25 +47,112 @@ body {
 }
 
 .top-middle-div {
+  display: flex;
+  justify-content: space-between ;
+  align-items: center;
   width: 100%;
-  background-color: purple;
+  border-bottom: 2px solid white;
   margin: 10px 0;
-  height: 100px; /* Set to 100px */
+  height: 82px; /* Set to 100px */
   align-self: flex-start;
-  flex-shrink: 0; /* Prevent shrinking */
+  flex-shrink: 0; /* Prevent shrinking */ 
+}
+.status-icon{
+  height: 50px;
+  width: 50px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+#Left_Indicator{
+  visibility: visible;
+}
+#High_Beam_Indicator{
+  visibility: visible;
+}
+#Right_Indicator{
+  visibility: visible;
 }
 
 .bottom-middle-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
-  background-color: lightcoral;
+  /*border: 5px solid white;*/
   margin: 10px 0;
-  height: 60vh;
+  height: 70vh;
   flex-grow: 1; /* Fill the remaining space */
   align-self: flex-start; /* Anchor to the top */
+  flex-direction: column;
+  align-items:center;
+}
+.trapezoid-container{
+  height: 350px;
+  width: 500px;
+  overflow: hidden;
+  display: flex;
+  justify-content:flex-start;
+  flex-direction: column-reverse;
+
+}
+.trapezoid {
+  width: 400px; /* Change the width as needed */
+  height: 0;
+  border-left: 150px solid transparent;
+  border-right: 0px solid transparent;
+  border-bottom: 300px solid wheat; /* Change the height and color as needed */
+  z-index: -1;
+  
+}
+.inner-trapezoid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px; /* Change the width as needed */
+  height: 0;
+  border-left: 150px solid transparent;
+  border-right: 0px solid transparent;
+  border-bottom: 300px solid black; /* Change the height and color as needed */
+  position:relative;
+  top: 80px;
+  left:-80px;
+  z-index: 0;
+}
+.speed{
+  position: relative;
+  margin-top:75%;
+  margin-left: -55%;
+
+  z-index: 1;
+  font-family: Arial, Helvetica, sans-serif;
+  color: wheat;
+  font-size: 96px;
+  font-weight: bold;
+
 }
 
 .right-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 15%;
-  background-color: lightgreen;
+  border-left: 2px solid white;
   height: 100%;
+}
+.fuel-level{
+  background-color: white;
+  height: 200px;
+  width: 50px;
+}
+.fuelfill {
+  position: relative;
+  left: 5%;
+  top: 1%;
+  width: 90%; /* Set the width to 50% */
+  height: 50%; /* Set the height as needed */
+  background-color: black; /* Set your desired color */
 }
