--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>instrument cluster</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <script src="scripts/main.js"></script>
-</head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}">    <script src="../static/scripts/main.js"></script>
+    <script src="../static/scripts/main.js"></script>
+  </head>
 <body>
 
     <div class="left-div">
@@ -19,11 +19,11 @@
 
     <div class="middle-container">
       <div class="top-middle-div">
-        <img class="status-icon" id="Left_Indicator" src="assets/img/left.png">
-        <img class="status-icon" id="Check_engine" src="assets/img/CE.jpg">
-        <img class="status-icon" id="High_Beam_Indicator" src="assets/img/High_Beam_Indicator.svg.png">
-        <img class="status-icon" id="sus" src="assets/img/among-us-icon-png-01.png">
-        <img class="status-icon" id="Right_Indicator" src="assets/img/right.png">
+        <img class="status-icon" id="Left_Indicator" src="../static/assets/img/left.png">
+        <img class="status-icon" id="Check_engine" src="../static/assets/img/CE.jpg">
+        <img class="status-icon" id="High_Beam_Indicator" src="../static/assets/img/High_Beam_Indicator.svg.png">
+        <img class="status-icon" id="sus" src="../static/assets/img/among-us-icon-png-01.png">
+        <img class="status-icon" id="Right_Indicator" src="../static/assets/img/right.png">
       </div>
       <div class="bottom-middle-div">
         <div class="trapezoid-container">
