--- a/static/assets/ui/test.css
+++ b/static/assets/ui/test.css
@@ -22,19 +22,21 @@ body {
   }
 
 .center{
-    width: 800px;
-    height: 250px;
+    width: 780px;
+    height: 200px;
     margin: 64px;
     position: relative; /* Position relative is required for positioning the SVG */
     overflow: hidden; 
 }
 .speedo{
-    width: 16%;
+    margin: 2px;
+    width: 85.7%;
     height: 100%;
-    position: relative; 
-    background-color: red;
+    max-width: 100%;
+    position: relative;
+    background-color: white;
     z-index: 0;
-    transition: width 0.3s; 
+    transition: width 0.3s;
 }
 .speedsvg{
     position: absolute;
@@ -43,4 +45,9 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1; /* Place the SVG above the div content */
+}
+.speedonumber{
+  font-size: 32px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
